@@ -1637,6 +1637,17 @@
       </component>
     </version>
   </module>
+  <module name="libgnomesu">
+    <version release="gnome-2.4">
+      <component name="libgnomesu" dir="libgnomesu" group="extras">
+        <podir dir="po"/>
+        <potname name="libgnomesu-1.0.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="libgnomeui">
     <version release="gnome-2.2">
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
