@@ -1,3 +1,7 @@
+2003-09-20  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added libgnomesu.
+
 2003-09-18  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-media has been branched.
